--- a/README
+++ b/README
@@ -5,21 +5,21 @@ Klavaro intends to be keyboard and language independent, saving memory
 and time (and money).
 
 Runtime requirements:
-  cygwin-1.5.23-2
+  cygwin-1.5.24-2
   atk-1.12.4-1
-  gdk-pixbuf2-2.10.7-1
-  glib2-2.12.7-1
-  gtk2-x11-2.10.7-1
+  gdk-pixbuf2-2.10.9-1
+  glib2-2.12.9-1
+  gtk2-x11-2.10.9-1
   libintl8-0.15-1
-  pango-1.14.9-1
+  pango-1.14.10-1
 
 Build requirements:
 (besides corresponding -devel packages)
-  cygwin-1.5.23-2
+  cygwin-1.5.24-2
   autoconf2.5-2.61-1
   automake1.9-1.9.6-2
   binutils-20060817-1
-  cygport-0.2.8-1
+  cygport-0.2.11-1
   gawk-3.1.5-4
   gcc-core-3.4.4-3
   make-3.81-1
@@ -30,34 +30,34 @@ Canonical website:
   http://klavaro.sourceforge.net/
 
 Canonical download:
-  http://prdownloads.sourceforge.net/klavaro/
+  http://downloads.sourceforge.net/klavaro/
 
 -------------------------------------------
 
 Build instructions:
-  unpack klavaro-1.0.1-X-src.tar.bz2
+  unpack klavaro-1.0.2-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./klavaro-1.0.1-X.cygport all
+  cygport ./klavaro-1.0.2-X.cygport all
 
 This will create:
-  /usr/src/klavaro-1.0.1-X-src.tar.bz2
-  /usr/src/klavaro-1.0.1-X.tar.bz2
+  /usr/src/klavaro-1.0.2-X-src.tar.bz2
+  /usr/src/klavaro-1.0.2-X.tar.bz2
 
 -------------------------------------------
 
 Files included in the binary package:
 
   /usr/bin/klavaro.exe
-  /usr/share/doc/Cygwin/klavaro-1.0.1.README
-  /usr/share/doc/klavaro-1.0.1/ABOUT-NLS
-  /usr/share/doc/klavaro-1.0.1/AUTHORS
-  /usr/share/doc/klavaro-1.0.1/COPYING
-  /usr/share/doc/klavaro-1.0.1/ChangeLog
-  /usr/share/doc/klavaro-1.0.1/INSTALL
-  /usr/share/doc/klavaro-1.0.1/NEWS
-  /usr/share/doc/klavaro-1.0.1/README
+  /usr/share/doc/Cygwin/klavaro-1.0.2.README
+  /usr/share/doc/klavaro-1.0.2/ABOUT-NLS
+  /usr/share/doc/klavaro-1.0.2/AUTHORS
+  /usr/share/doc/klavaro-1.0.2/COPYING
+  /usr/share/doc/klavaro-1.0.2/ChangeLog
+  /usr/share/doc/klavaro-1.0.2/INSTALL
+  /usr/share/doc/klavaro-1.0.2/NEWS
+  /usr/share/doc/klavaro-1.0.2/README
   /usr/share/klavaro/C.paragraphs
   /usr/share/klavaro/C.words
   /usr/share/klavaro/C_about.txt
@@ -198,6 +198,9 @@ Files included in the binary package:
 ------------------
 
 Port Notes:
+
+----- version 1.0.2-1 -----
+Version bump.
 
 ----- version 1.0.1-1 -----
 Version bump.
