--- a/README
+++ b/README
@@ -6,12 +6,12 @@ and time (and money).
 
 Runtime requirements:
   cygwin-1.5.24-2
-  atk-1.12.4-1
-  gdk-pixbuf2-2.10.11-1
-  glib2-2.12.12-1
-  gtk2-x11-2.10.11-1
+  atk-1.18.0-1
+  gdk-pixbuf2-2.10.14-1
+  glib2-2.12.13-1
+  gtk2-x11-2.10.14-1
   libintl8-0.15-1
-  pango-1.14.10-1
+  pango-1.16.5-1
 
 Build requirements:
 (besides corresponding -devel packages)
@@ -19,7 +19,7 @@ Build requirements:
   autoconf2.5-2.61-1
   automake1.9-1.9.6-2
   binutils-20060817-1
-  cygport-0.2.11-1
+  cygport-0.3.5-1
   gawk-3.1.5-4
   gcc-core-3.4.4-3
   make-3.81-1
@@ -35,29 +35,29 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack klavaro-1.0.3-X-src.tar.bz2
+  unpack klavaro-1.0.4-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./klavaro-1.0.3-X.cygport all
+  cygport ./klavaro-1.0.4-X.cygport all
 
 This will create:
-  /usr/src/klavaro-1.0.3-X-src.tar.bz2
-  /usr/src/klavaro-1.0.3-X.tar.bz2
+  /usr/src/klavaro-1.0.4-X-src.tar.bz2
+  /usr/src/klavaro-1.0.4-X.tar.bz2
 
 -------------------------------------------
 
 Files included in the binary package:
 
   /usr/bin/klavaro.exe
-  /usr/share/doc/Cygwin/klavaro-1.0.3.README
-  /usr/share/doc/klavaro-1.0.3/ABOUT-NLS
-  /usr/share/doc/klavaro-1.0.3/AUTHORS
-  /usr/share/doc/klavaro-1.0.3/COPYING
-  /usr/share/doc/klavaro-1.0.3/ChangeLog
-  /usr/share/doc/klavaro-1.0.3/INSTALL
-  /usr/share/doc/klavaro-1.0.3/NEWS
-  /usr/share/doc/klavaro-1.0.3/README
+  /usr/share/doc/Cygwin/klavaro-1.0.4.README
+  /usr/share/doc/klavaro-1.0.4/ABOUT-NLS
+  /usr/share/doc/klavaro-1.0.4/AUTHORS
+  /usr/share/doc/klavaro-1.0.4/COPYING
+  /usr/share/doc/klavaro-1.0.4/ChangeLog
+  /usr/share/doc/klavaro-1.0.4/INSTALL
+  /usr/share/doc/klavaro-1.0.4/NEWS
+  /usr/share/doc/klavaro-1.0.4/README
   /usr/share/klavaro/C.paragraphs
   /usr/share/klavaro/C.words
   /usr/share/klavaro/C_about.txt
@@ -198,6 +198,9 @@ Files included in the binary package:
 ------------------
 
 Port Notes:
+
+----- version 1.0.4-1 -----
+Version bump.
 
 ----- version 1.0.3-1 -----
 Version bump.
