--- a/README
+++ b/README
@@ -5,17 +5,17 @@ Klavaro intends to be keyboard and language independent, saving memory
 and time (and money).
 
 Runtime requirements:
-  cygwin-1.5.24-2
+  cygwin-1.5.25-7
   atk-1.20.0-1
-  gdk-pixbuf2-2.12.2-1
-  glib2-2.14.4-1
-  gtk2-x11-2.12.2-1
+  gdk-pixbuf2-2.12.5-1
+  glib2-2.14.5-1
+  gtk2-x11-2.12.5-1
   libintl8-0.15-1
-  pango-1.18.3-1
+  pango-1.18.4-1
 
 Build requirements:
 (besides corresponding -devel packages)
-  cygwin-1.5.24-2
+  cygwin-1.5.25-7
   autoconf2.5-2.61-1
   automake1.9-1.9.6-2
   binutils-20060817-1
@@ -213,6 +213,9 @@ Files included in the binary package:
 ------------------
 
 Port Notes:
+
+----- version 1.0.5-1 -----
+Version bump.
 
 ----- version 1.0.5-1 -----
 Version bump.
