--- a/README
+++ b/README
@@ -5,23 +5,23 @@ Klavaro intends to be keyboard and language independent, saving memory
 and time (and money).
 
 Runtime requirements:
-  cygwin-1.5.25-7
-  atk-1.20.0-1
-  gdk-pixbuf2-2.12.5-1
-  glib2-2.14.5-1
-  gtk2-x11-2.12.5-1
+  cygwin-1.5.25-11
+  atk-1.22.0-1
+  gdk-pixbuf2-2.12.9-1
+  glib2-2.16.3-1
+  gtk2-x11-2.12.9-1
   libintl8-0.15-1
-  pango-1.18.4-1
+  pango-1.20.3-1
 
 Build requirements:
 (besides corresponding -devel packages)
-  cygwin-1.5.25-7
   autoconf2.5-2.61-1
-  automake1.9-1.9.6-2
-  binutils-20060817-1
-  cygport-0.3.7-1
-  gawk-3.1.5-4
+  automake1.10-1.10.1-1
+  binutils-20080523-1
+  cygport-0.3.11-1
+  gawk-3.1.6-1
   gcc-core-3.4.4-3
+  gnome-common-2.20.0-2
   make-3.81-1
   pkg-config-0.21-1
   sed-4.1.5-2
@@ -35,27 +35,27 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack klavaro-1.0.7-X-src.tar.bz2
+  unpack klavaro-1.0.8-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./klavaro-1.0.7-X.cygport all
+  cygport ./klavaro-1.0.8-X.cygport all
 
 This will create:
-  /usr/src/klavaro-1.0.7-X-src.tar.bz2
-  /usr/src/klavaro-1.0.7-X.tar.bz2
+  /usr/src/klavaro-1.0.8-X-src.tar.bz2
+  /usr/src/klavaro-1.0.8-X.tar.bz2
 
 -------------------------------------------
 
 Files included in the binary package:
 
   /usr/bin/klavaro.exe
-  /usr/share/doc/klavaro-1.0.7/AUTHORS
-  /usr/share/doc/klavaro-1.0.7/COPYING
-  /usr/share/doc/klavaro-1.0.7/ChangeLog
-  /usr/share/doc/klavaro-1.0.7/INSTALL
-  /usr/share/doc/klavaro-1.0.7/NEWS
-  /usr/share/doc/klavaro-1.0.7/README
+  /usr/share/doc/klavaro-1.0.8/AUTHORS
+  /usr/share/doc/klavaro-1.0.8/COPYING
+  /usr/share/doc/klavaro-1.0.8/ChangeLog
+  /usr/share/doc/klavaro-1.0.8/INSTALL
+  /usr/share/doc/klavaro-1.0.8/NEWS
+  /usr/share/doc/klavaro-1.0.8/README
   /usr/share/klavaro/C.paragraphs
   /usr/share/klavaro/C.words
   /usr/share/klavaro/C_about.txt
@@ -213,6 +213,9 @@ Files included in the binary package:
 ------------------
 
 Port Notes:
+
+----- version 1.0.8-1 -----
+Version bump.
 
 ----- version 1.0.7-1 -----
 Version bump.
