--- a/README
+++ b/README
@@ -7,23 +7,23 @@ and time (and money).
 Runtime requirements:
   cygwin-1.5.25-15
   atk-1.22.0-1
-  gdk-pixbuf2-2.12.10-1
-  glib2-2.16.3-1
-  gtk2-x11-2.12.10-1
+  gdk-pixbuf2-2.12.11-1
+  glib2-2.16.4-1
+  gtk2-x11-2.12.11-1
   libintl8-0.15-1
-  pango-1.20.3-1
+  pango-1.20.5-1
 
 Build requirements:
 (besides corresponding -devel packages)
   autoconf2.5-2.61-1
   automake1.10-1.10.1-1
   binutils-20080523-1
-  cygport-0.3.11-1
+  cygport-0.3.12-1
   gawk-3.1.6-1
   gcc-core-3.4.4-3
   gnome-common-2.20.0-2
   make-3.81-1
-  pkg-config-0.21-1
+  pkg-config-0.23a-2
   sed-4.1.5-2
 
 Canonical website:
@@ -35,15 +35,15 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack klavaro-1.1.1-X-src.tar.bz2
+  unpack klavaro-1.1.3-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./klavaro-1.1.1-X.cygport all
+  cygport ./klavaro-1.1.3-X.cygport all
 
 This will create:
-  /usr/src/klavaro-1.1.1-X-src.tar.bz2
-  /usr/src/klavaro-1.1.1-X.tar.bz2
+  /usr/src/klavaro-1.1.3-X-src.tar.bz2
+  /usr/src/klavaro-1.1.3-X.tar.bz2
 
 -------------------------------------------
 
@@ -51,12 +51,12 @@ Files included in the binary package:
 
   /usr/bin/klavaro.exe
   /usr/bin/klavaro_helper.exe
-  /usr/share/doc/klavaro-1.1.1/AUTHORS
-  /usr/share/doc/klavaro-1.1.1/COPYING
-  /usr/share/doc/klavaro-1.1.1/ChangeLog
-  /usr/share/doc/klavaro-1.1.1/INSTALL
-  /usr/share/doc/klavaro-1.1.1/NEWS
-  /usr/share/doc/klavaro-1.1.1/README
+  /usr/share/doc/klavaro-1.1.3/AUTHORS
+  /usr/share/doc/klavaro-1.1.3/COPYING
+  /usr/share/doc/klavaro-1.1.3/ChangeLog
+  /usr/share/doc/klavaro-1.1.3/INSTALL
+  /usr/share/doc/klavaro-1.1.3/NEWS
+  /usr/share/doc/klavaro-1.1.3/README
   /usr/share/klavaro/C.paragraphs
   /usr/share/klavaro/C.words
   /usr/share/klavaro/C_about.txt
@@ -225,6 +225,9 @@ Files included in the binary package:
 ------------------
 
 Port Notes:
+
+----- version 1.1.3-1 -----
+Version bump.
 
 ----- version 1.1.1-1 -----
 Version bump.
